Implemented forgot and reset password endpoints
