# src/routes/v1/authRouter.ts
@@ -1,11 +1,19 @@
 import { Router } from 'express';
 import { notAllowedMethod, notFoundEndpoint } from '../../middlewares/notAllowedHandler';
-import { login, signup, confirmEmail } from '../../controllers/authController';
+import {
+  login,
+  signup,
+  confirmEmail,
+  forgotPassword,
+  resetPassword
+} from '../../controllers/authController';
 import requestValidator from '../../middlewares/requestValidator';
 import {
   confirmEmailSchema,
+  forgotPasswordSchema,
   signupSchema,
   loginSchema,
+  resetPasswordSchema,
   } from '../../validators/validate.auth';
 import { rateLimiter } from '../../utils/rateLimiter';
 
@@ -27,10 +35,26 @@ authRouter.route("/signup")
 
 authRouter.route("/confirm-email")
   .post(
-    rateLimiter(60, 5, "Too many requests, please try again later"),
     requestValidator({ bodySchema: confirmEmailSchema }),
     confirmEmail
   )
+  .all(notAllowedMethod);
+
+authRouter.route("/forgot-password")
+  .post(
+    rateLimiter(60, 5, "Too many requests, please try again later"),
+    requestValidator({ bodySchema: forgotPasswordSchema }),
+    forgotPassword,
+  )
+  .all(notAllowedMethod);
+
+  authRouter.route("/reset-password")
+  .post(
+    requestValidator({ bodySchema: resetPasswordSchema }),
+    resetPassword,
+  )
+  .all(notAllowedMethod);
+
 authRouter.route('*').all(notFoundEndpoint);
 
 export default authRouter;
